--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial_scale=1">
+        <title>Write title here</title>
     </head>
 </html>
