ganti metode fetch

--- a/day2/tes.html
+++ b/day2/tes.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head><title>NICO ASU</title></head>
+    <body>
     <script>
-    // Just getting XHR is a mess!
-        if (window.XMLHttpRequest) { // Mozilla, Safari, ...
-          request = new XMLHttpRequest();
-        } else if (window.ActiveXObject) { // IE
-          try {
-            request = new ActiveXObject('Msxml2.XMLHTTP');
-          } 
-          catch (e) {
-            try {
-              request = new ActiveXObject('Microsoft.XMLHTTP');
-            } 
-            catch (e) {}
-          }
-        }
-        
-        // Open, send.
-        request.open('GET', 'https://davidwalsh.name/ajax-endpoint', true);
-        request.send(null);
+    fetch("https://regres.in/api/users")
+    .then(respon => console.log(respon))
         </script>
+        </body>
 </html>
