--- a/day2/tes.html
+++ b/day2/tes.html
@@ -3,7 +3,7 @@
     <head><title>NICO ASU</title></head>
     <body>
     <script>
-    fetch("https://regres.in/api/users")
+    fetch("https://reqres.in/api/users")
     .then(respon => console.log(respon))
         </script>
         </body>
