--- a/day2/tes.html
+++ b/day2/tes.html
@@ -3,8 +3,13 @@
     <head><title>NICO ASU</title></head>
     <body>
     <script>
-    fetch("https://reqres.in/api/users")
-    .then(respon => console.log(respon))
+    fetch("https://reqres.in/api/users", {method:"get"})
+    .then(res => res.json())
+    .then(data => console.log(data))
+    .catch(function(err){
+        console.log("Terjadi error")
+    })
+
         </script>
         </body>
 </html>
